syntax = "proto3";
package api;

message PingMessage {
    string greeting = 1;
}

message Chunk {
    bytes Content = 1;
}

service Ping {
    rpc SayHello(PingMessage) returns (PingMessage) {}
}

service UploadService {
    rpc Upload(stream Chunk) returns (UploadStatus) {}
}

enum UploadStatusCode {
    Unknown = 0;
    Ok = 1;
    Failed = 2;
}

message UploadStatus {
    string Message = 1;
    UploadStatusCode Code = 2;
}